sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var swapped=false
  do {
    swapped= false;
    for (i <- 0 to getValueCount()-2) {
      if(iSmaller(i+1,i)) {
        swap(i;i+1);
        swapped= true;
      }
    } while(swapped);
  }
}